Fixed styling for top buttons on mobile

--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -106,6 +106,7 @@
     justify-self: center;
     margin-left: auto;
     margin-right: auto;
+    width: 90%;
   }
 
   .top-button {
